feat: add update versioning foundation
